# sd-webui-piwigo

./: README.md  install.py  pyproject.toml
piwigo/: client.py  test_client.py
prompts/: prompt.py  test_format.py
scripts/: piwigo.py
