[tool.poetry]
name = "sd-webui-piwigo"
version = "0.1.0"
description = ""
authors = ["hulucc <hulucc@outlook.com>"]
readme = "README.md"
packages = [{include = "sd_webui_piwigo"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
httpx = "^0.24.1"
aiofiles = "^23.1.0"
regex = "^2023.5.5"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
